force-app/main/default/objects/WheelProductStandard__c/WheelProductStandard__c.object-meta.xml
<CustomObject>
    <description>Product standard for wheels and joint products</description>
    <label>Wheel Standard</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wheel Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>