force-app/main/default/objects/WheelProductStandard__c/fields/FullName_UA__c.field-meta.xml
<CustomField>
    <fullName>FullName_UA__c</fullName>
    <label>Full Name UA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>