force-app/main/default/objects/WheelProductStandard__c/fields/IsChecked__c.field-meta.xml
<CustomField>
    <fullName>IsChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsChecked</label>
    <type>Checkbox</type>
</CustomField>