force-app/main/default/objects/WheelProductStandard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FullName__c</columns>
    <columns>FullName_UA__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>ERP_FacetCode__c</columns>
    <columns>Obsolete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>